--- a/sucess.html
+++ b/sucess.html
@@ -62,6 +62,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
         });
     </script>
+    <script>
+		dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+dataLayer.push({
+  event: "purchase",
+  ecommerce: {
+	  item_id:"COURSE_01",
+	  item_name:"Python",
+	  affiliation:"MOOC",
+	  currency:"INR"
+  }
+})
+	</script>
 
     <title>Sucess Page</title>
 </head>
