--- a/sucess2.html
+++ b/sucess2.html
@@ -55,6 +55,18 @@
             });
         });
     </script>
+    <script>
+		dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+dataLayer.push({
+  event: "purchase",
+  ecommerce: {
+	  item_id:"COURSE_02",
+	  item_name:"Web Analytics",
+	  affiliation:"MOOC",
+	  currency:"INR"
+  }
+})
+	</script>
 
     <title>Sucess Page</title>
 </head>
@@ -90,7 +102,7 @@
 
 </br></br></br></br></br></br>
 
-<img src="img/succes.jpg"  width="500" height="400">
+<img src="img/succes.JPG"  width="500" height="400">
 </br>
 </br>
 </br>
