--- a/index.html
+++ b/index.html
@@ -65,18 +65,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             });
         });
 	    </script>
-	<script>
-		dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
-dataLayer.push({
-  event: "purchase",
-  ecommerce: {
-	  item_id:"COURSE_01",
-	  item_name:"Python",
-	  affiliation:"MOOC",
-	  currency:"INR"
-  }
-})
-	</script>
 	
     <title>Course Page</title>
 </head>
@@ -122,14 +110,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </p>
 
 &emsp;  &emsp;  &emsp;  &emsp;  <button><a href="cart.html" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
-<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess.html">Purchase</a></button><br />
+<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess1.html">Purchase</a></button><br />
 </br></br>
 <p>
 &emsp;  &emsp;  <img src="img/2.JPG" width="500" height="200">
 </p>
 
 &emsp;  &emsp;  &emsp;  &emsp;  <button><a href="cart.html" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
-<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess.html">Purchase</a></button><br />
+<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess2.html">Purchase</a></button><br />
 
 </body>
 
