--- a/sucess2.html
+++ b/sucess2.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M5PVN9S');</script>
+<!-- End Google Tag Manager -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,7 +63,7 @@
         });
     </script>
     <script>
-		dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+		dataLayer.push({ ecommerce: null });  
 dataLayer.push({
   event: "purchase",
   ecommerce: {
